# fastapi-review

./: __init__.py  main.py  pyproject.toml
src/http_methods/: __init__.py  get_methods.py
